samples/_failures_safe/1761334783_f3172a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbd3a270.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_cbd3a270.c:157:9: error: expected expression at end of input
  157 |         } else
      |         ^
./samples/SAFE/__tmp_cbd3a270.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cbd3a270.c:157:9: error: expected declaration or statement at end of input
